--- a/client/src/components/Calendar/components/CalendarController/CalendarController.module.scss
+++ b/client/src/components/Calendar/components/CalendarController/CalendarController.module.scss
@@ -2,7 +2,7 @@
   grid-area: calendar_controller;
   width: 100%;
   min-height: 64px;
-  grid-column: 1 / 7;
+  grid-column: 1 / 8;
   grid-row: 0 / 1;
 
   display: grid;
