--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -5,10 +5,10 @@
   // max-width: 1270px;
 
   display: grid;
-  // grid-template-columns: repeat(7, 1fr);
+  grid-template-columns: repeat(7, 1fr) 1rem;
   grid-template-rows: auto;
   justify-items: stretch;
-  align-content: stretch;
+  align-content: center;
   gap: 2rem;
 
   // grid-column: 2 / 5;
@@ -18,21 +18,32 @@
 
 }
 
+@media (max-width: 1000px) {
+  .Header {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-template-areas: 
+    "user_name"
+    "project_name";
+  }
+}
+
 .Header__userName {
-  grid-column: 0 / 2;
+  grid-column: 0 / 5;
   font-size: 1.5rem;
   font-weight: 900;
   user-select: none;
-
+  margin: 0;
   border: 3px solid #ff4;
 
 }
 
 .Header__projectName {
-  grid-column: 6 / 7;
+  grid-column: 5 / 8;
   font-size: 1.5rem;
   font-weight: 900;
   user-select: none;
+  margin: 0;
 
   justify-self: flex-end;
 
