--- a/client/src/components/Sidebar/Sidebar.module.scss
+++ b/client/src/components/Sidebar/Sidebar.module.scss
@@ -2,7 +2,7 @@
   grid-area: sidebar;
   // grid-column: 0 / 2;
   // grid-row-start: 0;
-  // position: sticky;
+  position: sticky;
   top: 0; 
   width: 100%;
   min-width: 250px;
